--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   flex_color_scheme: ^8.4.0 # App Theme
+  go_router: ^17.0.1 # Routing
 
 dev_dependencies:
   flutter_test:
