--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flex_color_scheme: ^8.4.0 # App Theme
   go_router: ^17.0.1 # Routing
+  flutter_staggered_grid_view: ^0.7.0 # Staggered Grid
 
 dev_dependencies:
   flutter_test:
