--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flex_color_scheme: ^8.4.0 # App Theme
   go_router: ^17.0.1 # Routing
   flutter_staggered_grid_view: ^0.7.0 # Staggered Grid
+  firebase_core: ^4.3.0
 
 dev_dependencies:
   flutter_test:
